# AmpProfiler

.github/workflows/: build.yml
AmpProfiler/: README.txt  README_CI.txt  README_STEP_BY_STEP.txt
AmpProfiler/plugin/: CMakeLists.txt  build_mac.sh  build_win.ps1
AmpProfiler/plugin/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
AmpProfiler/plugin/Source/Dsp/: OnnxModel.h  PartitionedConvolver.h  SignalUtils.h
AmpProfiler/plugin/Source/Profiles/: CabManager.h  ProfileManager.h
AmpProfiler/plugin/Source/UI/: BrowseList.h  BrowserPanel.h
AmpProfiler/plugin/Source/Util/: PathHelpers.h
AmpProfiler/trainer/: dataset.py  export.py  losses.py  model.py  requirements.txt  train.py
